# SoftRayTracer

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  SoftRayTracer.cpp  SoftRayTracer.h
docs/: trace.tga
src/: SoftRayTracer.cpp  SoftRayTracer.h  camera.cpp  camera.h  color.h  image.cpp  image.h  material.h  world.h
src/geometry/: ray.h  sphere.h  traceable.h  vector.h
src/math/: tmath.h  vector.h
src/utils/: log.h  tassert.h  utils.h
